--- a/app/frontend/body.phtml
+++ b/app/frontend/body.phtml
@@ -1,3 +1,4 @@
-<div class="main-content-title">
-    <h1>Watch Today</h1>
+<div class="main-content">
+    <h1 id="title-page" class="main-content-title">Watch Today</h1>
+    <div id="main-content"></div>
 </div>
