--- a/app/frontend/header.phtml
+++ b/app/frontend/header.phtml
@@ -1,9 +1,34 @@
-<?php if ($_COOKIE['user_role'] == 0) :?>
-    <nav class="nav">
-        <div class="red align-center nav-element">Multiplex Track</div>
+<!--no user navigation header-->
+<?php if (!isset($_SESSION['user'])) : ?>
+    <nav class="nav-no-user">
+        <div class="red align-center nav-element" onclick="window.location.href = '/'">Multiplex Track</div>
         <div class="align-center">No User</div>
         <div class="align-center">
             <button class="open-button" onclick="openForm()">Login</button>
         </div>
     </nav>
-<?php endif; include '/Users/macbook/PhpstormProjects/MultiplexTrack/app/frontend/User/login.phtml' ?>
+<?php include '/Users/macbook/PhpstormProjects/MultiplexTrack/app/frontend/User/login.phtml'; endif;?>
+
+<!--regular user navigation header-->
+<?php if (isset($_SESSION['user']) && $_SESSION['user']->getType() == 1) : ?>
+    <nav class="nav-user">
+        <div class="red align-center nav-element" onclick="window.location.href = '/'">Multiplex Track</div>
+        <div class="align-center">Regular User</div>
+        <button class="open-button align-center" onclick="">Account</button>
+        <button class="open-button align-center nav-end-element" onclick="window.location.href = '/user/logout'">Logout</button>
+    </nav>
+<?php endif; ?>
+
+<!--admin user navigation header-->
+<?php if (isset($_SESSION['user']) && $_SESSION['user']->getType() == 2) : ?>
+    <nav class="nav-admin">
+        <div class="red align-center nav-element" onclick="window.location.href = '/'">Multiplex Track</div>
+        <div class="align-center">Admin User</div>
+        <button class="open-button align-center" onclick="">Statistics</button>
+        <button class="open-button align-center" onclick="changeTitle('Schedules'); getEmptySchedule();">Schedules</button>
+        <button class="open-button align-center" onclick="">Users</button>
+        <button class="open-button align-center" onclick="changeTitle('Movies'); getMovies();">Movies</button>
+        <button class="open-button align-center" onclick="">Account</button>
+        <button class="open-button align-center nav-end-element" onclick="window.location.href = '/user/logout'">Logout</button>
+    </nav>
+<?php endif; ?>
