Implement add movie back and functionality.

--- a/app/frontend/Movies/movies-list.phtml
+++ b/app/frontend/Movies/movies-list.phtml
@@ -4,6 +4,7 @@
             <tr>
                 <th>Id</th>
                 <th>Title</th>
+                <th>Year</th>
                 <th>Type</th>
                 <th>Duration</th>
                 <th>Categories</th>
@@ -16,6 +17,7 @@
             <tr>
                 <td><?php echo $result['id'] ?></td>
                 <td><?php echo $result['title'] ?></td>
+                <td><?php echo $result['year'] ?></td>
                 <td><?php echo $result['type'] ?></td>
                 <td><?php echo $result['duration'] ?></td>
                 <td><?php echo $result['categories'] ?></td>
