--- a/app/frontend/head.phtml
+++ b/app/frontend/head.phtml
@@ -14,5 +14,6 @@
     <script src="js/common.js"></script>
     <script src="js/shedules.js"></script>
     <script src="js/movies.js"></script>
+    <script src="js/movies-add-modal.js"></script>
 </head>
 <body class="main">
