Implement add movie to shedule backend functionality.

--- a/app/frontend/Movies/movies-list.phtml
+++ b/app/frontend/Movies/movies-list.phtml
@@ -1,3 +1,9 @@
+<?php
+/**
+ * @var $results - movies returned from database query
+ */
+?>
+
 <div class="main-movies-grid">
     <table>
         <thead>
