--- a/css/shedules.css
+++ b/css/shedules.css
@@ -1,3 +1,9 @@
+.schedule-main {
+    display: grid;
+    grid-template-rows: auto 40px;
+    grid-row-gap: 10px;
+}
+
 .week-grid {
     display: grid;
     justify-self: center;
@@ -7,7 +13,7 @@
 
 .day-grid {
     display: grid;
-    grid-template-rows: 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px;
+    grid-template-rows: 30px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px 60px;
     background-color: antiquewhite;
 }
 
@@ -70,6 +76,10 @@
     align-items: center;
 }
 
+.overlay-red {
+    background-color: red; !important;
+}
+
 .overlay-movie-title {
     text-align: center;
     vertical-align: middle;
@@ -79,4 +89,18 @@
 .remove-overlay-button:hover {
     color: red;
     cursor: pointer;
+}
+
+.day-title {
+    font-size: 17px;
+    text-align: center;
+    text-justify: distribute-center-last;
+    height: 30px;
+    background-color: white;
+}
+
+.schedule-page {
+    display: grid;
+    grid-template-rows: 60px auto 40px;
+    grid-row-gap: 10px;
 }
