--- a/app/frontend/Schedules/schedules.phtml
+++ b/app/frontend/Schedules/schedules.phtml
@@ -46,5 +46,5 @@ function getDay($day)
         </div>
     </div>
     <?php endfor; ?>
-    <button>Publish</button>
+    <button onclick="publishSchedules()">Publish</button>
 </div>
