--- a/app/frontend/head.phtml
+++ b/app/frontend/head.phtml
@@ -8,11 +8,11 @@
     <title>Multiplex Track</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/loginpopup.css">
-    <link rel="stylesheet" href="css/shedules.css">
+    <link rel="stylesheet" href="css/schedules.css">
     <link rel="stylesheet" href="css/movies.css">
     <script src="js/loginpopup.js"></script>
     <script src="js/common.js"></script>
-    <script src="js/shedules.js"></script>
+    <script src="js/schedules.js"></script>
     <script src="js/movies.js"></script>
     <script src="js/movies-add-modal.js"></script>
 </head>
