Implement watch today functionality (In progress).

--- a/app/frontend/body.phtml
+++ b/app/frontend/body.phtml
@@ -1,4 +1,6 @@
 <div class="main-content">
     <h1 id="title-page" class="main-content-title">Watch Today</h1>
-    <div id="main-content"></div>
+    <div id="main-content">
+        <?php include __ROOT__ . 'app/frontend/WatchToday/watch-today.phtml'?>
+    </div>
 </div>
