--- a/app/frontend/head.phtml
+++ b/app/frontend/head.phtml
@@ -10,10 +10,12 @@
     <link rel="stylesheet" href="css/loginpopup.css">
     <link rel="stylesheet" href="css/schedules.css">
     <link rel="stylesheet" href="css/movies.css">
+    <link rel="stylesheet" href="css/watch-today.css">
     <script src="js/loginpopup.js"></script>
     <script src="js/common.js"></script>
     <script src="js/schedules.js"></script>
     <script src="js/movies.js"></script>
     <script src="js/movies-add-modal.js"></script>
+    <script src="js/watch-today.js"></script>
 </head>
 <body class="main">
