--- a/app/frontend/User/login.phtml
+++ b/app/frontend/User/login.phtml
@@ -1,5 +1,5 @@
 <div class="form-popup" id="myLoginForm">
-    <form action="/user/login" class="form-container" method="post">
+    <div class="form-container">
         <h1>Login</h1>
 
         <label for="username"><b>Username</b></label>
@@ -8,12 +8,12 @@
         <label for="psw"><b>Password</b></label>
         <input type="password" placeholder="Enter Password" name="psw" required>
 
-        <button type="submit" class="btn" name="login">Login</button>
+        <button class="btn" name="login" onclick="login()">Login</button>
         <button class="btn button-registration" onclick="openRegistrationForm()">Registration</button>
-    </form>
+    </div>
 </div>
 <div class="form-popup registration" id="myRegistrationForm">
-    <form action="/user/register" class="form-container" method="post">
+    <div class="form-container">
         <h1>Registration</h1>
 
         <label for="reg_username"><b>Username</b></label>
@@ -28,7 +28,7 @@
         <label for="reg_phone"><b>Phonenumber</b></label>
         <input type="text" placeholder="Enter Phonenumber" name="reg_phone">
 
-        <button type="submit" class="btn" name="register">Register</button>
+        <button class="btn" name="register" onclick="registerUser()">Register</button>
         <button class="btn button-registration" onclick="openLoginForm()">Login to App</button>
-    </form>
+    </div>
 </div>
