Add reports page.

--- a/app/frontend/Movies/movies-list.phtml
+++ b/app/frontend/Movies/movies-list.phtml
@@ -5,7 +5,7 @@
 ?>
 
 <div class="main-movies-grid">
-    <table>
+    <table id="movies">
         <thead>
             <tr>
                 <th>Id</th>
