--- a/app/frontend/header.phtml
+++ b/app/frontend/header.phtml
@@ -23,7 +23,7 @@
     <nav class="nav-admin">
         <div class="red align-center nav-element" onclick="window.location.href = '/'">Multiplex Track</div>
         <div class="align-center">Admin User</div>
-        <button class="open-button align-center" onclick="">Statistics</button>
+        <button class="open-button align-center" onclick="changeTitle('Reports'); getReportsPage()">Reports</button>
         <button class="open-button align-center" onclick="changeTitle('Schedules'); getEmptySchedule();">Schedules</button>
         <button class="open-button align-center" onclick="changeTitle('Movies'); getMovies();">Movies</button>
         <button class="open-button align-center nav-end-element" onclick="window.location.href = '/user/logout'">Logout</button>
