--- a/app/frontend/head.phtml
+++ b/app/frontend/head.phtml
@@ -17,5 +17,7 @@
     <script src="js/movies.js"></script>
     <script src="js/movies-add-modal.js"></script>
     <script src="js/watch-today.js"></script>
+    <script src="js/reports.js"></script>
+    <script src="https://www.gstatic.com/charts/loader.js"></script>
 </head>
 <body class="main">
