--- a/css/movies.css
+++ b/css/movies.css
@@ -11,9 +11,27 @@
 
 /* Table CSS*/
 
-table, th, td {
-    border: 1px solid black;
+#movies {
+    font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
+    width: 100%;
+}
+
+#movies td, #movies th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#movies tr:nth-child(even){background-color: #f2f2f2;}
+
+#movies tr:hover {background-color: #ddd;}
+
+#movies th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #53a8af;
+    color: white;
 }
 
 /* Modal CSS*/
